RESOLVED FIXED Bug 76672
Node.cpp shouldn't duplicate QualifiedName parsing logic
https://bugs.webkit.org/show_bug.cgi?id=76672
Summary Node.cpp shouldn't duplicate QualifiedName parsing logic
WebKit Review Bot
Reported 2012-01-19 16:02:11 PST
Move isValidNameStart and friends to QualifiedName.cpp Requested by abarth on #webkit.
Attachments
Patch (3.54 KB, patch)
2012-01-25 02:52 PST, Adam Barth
no flags
Patch for landing (3.53 KB, patch)
2012-01-25 14:37 PST, Adam Barth
no flags
Adam Barth
Comment 1 2012-01-25 02:52:09 PST
WebKit Review Bot
Comment 2 2012-01-25 05:09:06 PST
Comment on attachment 123906 [details] Patch Rejecting attachment 123906 [details] from commit-queue. New failing tests: fast/dom/node-prefix-setter-namespace-exception.html fast/dom/element-attribute-js-null.html Full output: http://queues.webkit.org/results/11242763
WebKit Review Bot
Comment 3 2012-01-25 07:13:52 PST
Comment on attachment 123906 [details] Patch Attachment 123906 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11159531 New failing tests: fast/dom/node-prefix-setter-namespace-exception.html fast/dom/element-attribute-js-null.html
Adam Barth
Comment 4 2012-01-25 14:37:23 PST
Created attachment 124014 [details] Patch for landing
WebKit Review Bot
Comment 5 2012-01-25 15:31:43 PST
Comment on attachment 124014 [details] Patch for landing Clearing flags on attachment: 124014 Committed r105933: <http://trac.webkit.org/changeset/105933>
WebKit Review Bot
Comment 6 2012-01-25 15:31:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.